Quorum3/Library/Tests/Expressions/Pass/EqualTextText.quorum
class Main
    action Main
        boolean b = "a" = "b"
        output b
        output "hello" = "hello"
    end
end