Quorum3/Library/Tests/Expressions/Fail/ChangeConstant.quorum
class ChangeConstant 
    action Main
        constant text value = ""
        value = "This cannot change"
    end
end